adding the notebooks

--- a/Pyspark.coalesce.ipynb
+++ b/Pyspark.coalesce.ipynb
@@ -22,8 +22,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x2544bea8320>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://Done:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v2.4.5</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>ShortNSimple</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": [
+       "<pyspark.sql.session.SparkSession at 0x7fdcaab1af40>"
+      ],
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://192.168.1.8:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.0.1</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>ShortNSimple</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
      "metadata": {},
      "execution_count": 2
@@ -53,7 +55,14 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "  country   latitude  longitude              location\n0      AD  42.546245   1.601554               Andorra\n1      AE  23.424076  53.847818  United Arab Emirates\n2      AF  33.939110  67.709953           Afghanistan\n3      AG  17.060816 -61.796428   Antigua and Barbuda\n4      AI  18.220554 -63.068615              Anguilla",
+      "text/plain": [
+       "  country   latitude  longitude              location\n",
+       "0      AD  42.546245   1.601554               Andorra\n",
+       "1      AE  23.424076  53.847818  United Arab Emirates\n",
+       "2      AF  33.939110  67.709953           Afghanistan\n",
+       "3      AG  17.060816 -61.796428   Antigua and Barbuda\n",
+       "4      AI  18.220554 -63.068615              Anguilla"
+      ],
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>country</th>\n      <th>latitude</th>\n      <th>longitude</th>\n      <th>location</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>AD</td>\n      <td>42.546245</td>\n      <td>1.601554</td>\n      <td>Andorra</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>AE</td>\n      <td>23.424076</td>\n      <td>53.847818</td>\n      <td>United Arab Emirates</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>AF</td>\n      <td>33.939110</td>\n      <td>67.709953</td>\n      <td>Afghanistan</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>AG</td>\n      <td>17.060816</td>\n      <td>-61.796428</td>\n      <td>Antigua and Barbuda</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>AI</td>\n      <td>18.220554</td>\n      <td>-63.068615</td>\n      <td>Anguilla</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
@@ -72,7 +81,9 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "+-------+---------+------------------+--------------------+\n|country| latitude|         longitude|            location|\n+-------+---------+------------------+--------------------+\n|     AD|42.546245|1.6015540000000001|             Andorra|\n|     AE|23.424076|53.847818000000004|United Arab Emirates|\n+-------+---------+------------------+--------------------+\nonly showing top 2 rows\n\n"
+     "text": [
+      "+-------+---------+------------------+--------------------+\n|country| latitude|         longitude|            location|\n+-------+---------+------------------+--------------------+\n|     AD|42.546245|1.6015540000000001|             Andorra|\n|     AE|23.424076|53.847818000000004|United Arab Emirates|\n+-------+---------+------------------+--------------------+\nonly showing top 2 rows\n\n"
+     ]
     }
    ],
    "source": [
@@ -88,7 +99,9 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "+-----------+--------------------+\n|county_code|         county_name|\n+-----------+--------------------+\n|         AD|             Andorra|\n|         AE|United Arab Emirates|\n+-----------+--------------------+\nonly showing top 2 rows\n\n"
+     "text": [
+      "+-----------+--------------------+\n|county_code|         county_name|\n+-----------+--------------------+\n|         AD|             Andorra|\n|         AE|United Arab Emirates|\n+-----------+--------------------+\nonly showing top 2 rows\n\n"
+     ]
     }
    ],
    "source": [
@@ -98,13 +111,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "+-----------+---------+------------------+\n|county_code| latitude|         longitude|\n+-----------+---------+------------------+\n|         AD|42.546245|1.6015540000000001|\n|         AE|23.424076|53.847818000000004|\n+-----------+---------+------------------+\nonly showing top 2 rows\n\n"
+     "text": [
+      "+-----------+---------+------------------+\n|county_code| latitude|         longitude|\n+-----------+---------+------------------+\n|         AD|42.546245|1.6015540000000001|\n|         AE|23.424076|53.847818000000004|\n+-----------+---------+------------------+\nonly showing top 2 rows\n\n"
+     ]
     }
    ],
    "source": [
@@ -115,16 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "13"
+      "text/plain": [
+       "11"
+      ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 7
     }
    ],
    "source": [
@@ -140,13 +157,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "+-----------+--------------------+-----------+-------------------+-------------------+\n|county_code|county_name         |county_code|latitude           |longitude          |\n+-----------+--------------------+-----------+-------------------+-------------------+\n|AD         |Andorra             |AD         |42.546245          |1.6015540000000001 |\n|AE         |United Arab Emirates|AE         |23.424076          |53.847818000000004 |\n|AF         |Afghanistan         |null       |null               |null               |\n|AG         |Antigua and Barbuda |null       |null               |null               |\n|AI         |Anguilla            |AI         |18.220554          |-63.068615         |\n|AL         |Albania             |AL         |41.153332          |20.168331          |\n|AM         |Armenia             |AM         |40.069099          |45.038189          |\n|AN         |Netherlands Antilles|AN         |12.226078999999999 |-69.060087         |\n|AO         |Angola              |AO         |-11.202691999999999|17.873887          |\n|AQ         |Antarctica          |AQ         |-75.250973         |-0.071389          |\n|null       |null                |AR         |-38.416097         |-63.616671999999994|\n|null       |null                |AS         |-14.270972         |-170.132217        |\n|null       |null                |AT         |47.516231          |14.550072          |\n|null       |null                |AU         |-25.274398         |133.775136         |\n|null       |null                |AW         |12.52111           |-69.968338         |\n+-----------+--------------------+-----------+-------------------+-------------------+\n\n"
+     "text": [
+      "+-----------+--------------------+-----------+-------------------+-------------------+\n|county_code|county_name         |county_code|latitude           |longitude          |\n+-----------+--------------------+-----------+-------------------+-------------------+\n|AD         |Andorra             |AD         |42.546245          |1.6015540000000001 |\n|AE         |United Arab Emirates|AE         |23.424076          |53.847818000000004 |\n|AF         |Afghanistan         |null       |null               |null               |\n|AG         |Antigua and Barbuda |AG         |17.060816          |-61.796428000000006|\n|AI         |Anguilla            |AI         |18.220554          |-63.068615         |\n|AL         |Albania             |AL         |41.153332          |20.168331          |\n|AM         |Armenia             |null       |null               |null               |\n|AN         |Netherlands Antilles|null       |null               |null               |\n|AO         |Angola              |AO         |-11.202691999999999|17.873887          |\n|AQ         |Antarctica          |AQ         |-75.250973         |-0.071389          |\n|null       |null                |AR         |-38.416097         |-63.616671999999994|\n|null       |null                |AS         |-14.270972         |-170.132217        |\n|null       |null                |AT         |47.516231          |14.550072          |\n|null       |null                |AU         |-25.274398         |133.775136         |\n+-----------+--------------------+-----------+-------------------+-------------------+\n\n"
+     ]
     }
    ],
    "source": [
@@ -167,13 +186,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "+-----------+--------------------+-----------+-------------------+-------------------+---------------+\n|county_code|county_name         |county_code|latitude           |longitude          |new_county_code|\n+-----------+--------------------+-----------+-------------------+-------------------+---------------+\n|AD         |Andorra             |AD         |42.546245          |1.6015540000000001 |Default        |\n|AE         |United Arab Emirates|AE         |23.424076          |53.847818000000004 |Default        |\n|AF         |Afghanistan         |null       |null               |null               |Default        |\n|AG         |Antigua and Barbuda |null       |null               |null               |Default        |\n|AI         |Anguilla            |AI         |18.220554          |-63.068615         |Default        |\n|AL         |Albania             |AL         |41.153332          |20.168331          |Default        |\n|AM         |Armenia             |AM         |40.069099          |45.038189          |Default        |\n|AN         |Netherlands Antilles|AN         |12.226078999999999 |-69.060087         |Default        |\n|AO         |Angola              |AO         |-11.202691999999999|17.873887          |Default        |\n|AQ         |Antarctica          |AQ         |-75.250973         |-0.071389          |Default        |\n|null       |null                |AR         |-38.416097         |-63.616671999999994|Default        |\n|null       |null                |AS         |-14.270972         |-170.132217        |Default        |\n|null       |null                |AT         |47.516231          |14.550072          |Default        |\n|null       |null                |AU         |-25.274398         |133.775136         |Default        |\n|null       |null                |AW         |12.52111           |-69.968338         |Default        |\n+-----------+--------------------+-----------+-------------------+-------------------+---------------+\n\n"
+     "text": [
+      "+-----------+--------------------+-----------+-------------------+-------------------+---------------+\n|county_code|county_name         |county_code|latitude           |longitude          |new_county_code|\n+-----------+--------------------+-----------+-------------------+-------------------+---------------+\n|AD         |Andorra             |AD         |42.546245          |1.6015540000000001 |AD             |\n|AE         |United Arab Emirates|AE         |23.424076          |53.847818000000004 |AE             |\n|AF         |Afghanistan         |null       |null               |null               |AF             |\n|AG         |Antigua and Barbuda |AG         |17.060816          |-61.796428000000006|AG             |\n|AI         |Anguilla            |AI         |18.220554          |-63.068615         |AI             |\n|AL         |Albania             |AL         |41.153332          |20.168331          |AL             |\n|AM         |Armenia             |null       |null               |null               |AM             |\n|AN         |Netherlands Antilles|null       |null               |null               |AN             |\n|AO         |Angola              |AO         |-11.202691999999999|17.873887          |AO             |\n|AQ         |Antarctica          |AQ         |-75.250973         |-0.071389          |AQ             |\n|null       |null                |AR         |-38.416097         |-63.616671999999994|AR             |\n|null       |null                |AS         |-14.270972         |-170.132217        |AS             |\n|null       |null                |AT         |47.516231          |14.550072          |AT             |\n|null       |null                |AU         |-25.274398         |133.775136         |AU             |\n+-----------+--------------------+-----------+-------------------+-------------------+---------------+\n\n"
+     ]
     }
    ],
    "source": [
@@ -194,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,13 +225,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "+-------------+-------------+---------------+\n|a_county_code|b_county_code|new_county_code|\n+-------------+-------------+---------------+\n|AD           |AD           |SOMENAME       |\n|AE           |AE           |SOMENAME       |\n|AF           |null         |SOMENAME       |\n|AG           |null         |SOMENAME       |\n|AI           |AI           |SOMENAME       |\n|AL           |AL           |SOMENAME       |\n|AM           |AM           |SOMENAME       |\n|AN           |AN           |SOMENAME       |\n|AO           |AO           |SOMENAME       |\n|AQ           |AQ           |SOMENAME       |\n|null         |AR           |SOMENAME       |\n|null         |AS           |SOMENAME       |\n|null         |AT           |SOMENAME       |\n|null         |AU           |SOMENAME       |\n|null         |AW           |SOMENAME       |\n+-------------+-------------+---------------+\n\n"
+     "text": [
+      "+-------------+-------------+---------------+\n|a_county_code|b_county_code|new_county_code|\n+-------------+-------------+---------------+\n|AD           |AD           |AD             |\n|AE           |AE           |AE             |\n|AF           |null         |AF             |\n|AG           |AG           |AG             |\n|AI           |AI           |AI             |\n|AL           |AL           |AL             |\n|AM           |null         |AM             |\n|AN           |null         |AN             |\n|AO           |AO           |AO             |\n|AQ           |AQ           |AQ             |\n|null         |AR           |AR             |\n|null         |AS           |AS             |\n|null         |AT           |AT             |\n|null         |AU           |AU             |\n+-------------+-------------+---------------+\n\n"
+     ]
     }
    ],
    "source": [
@@ -244,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7-final"
+   "version": "3.8.3-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
